--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -30,6 +30,7 @@ jobs:
           context: .
           file: Dockerfile
           push: false
+          load: true
           tags: dev-container:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
